--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div  class="campo">
                         <!--Coloca o link menu aqui--> <i>person</i>
                         <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
-                        <label for="ilogin"></label>
+                        <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
                         <!--Coloca o link menu aqui tambem--> <i>vpn_key</i>
@@ -29,7 +29,7 @@
                         <label for="isenha"></label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">
+                    <a href="esqueci.html" class="botao">
                         Esaqueci a senha <i class="material.icons">mail</i>
                     </a>
                 </form>
